--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,18 @@
 <resources>
     <string name="app_name">LISTADEPROYECTO</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <!-- TODO: string do fragmento 1 -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="bem_vindo">Bem-vindo!</string>
+    <string name="list_view">ListView:</string>
+    <string name="use">Use</string>
+    <string name="entenda">Entenda</string>
+    <string name="aprenda">Aprenda</string>
+
+    <!-- TODO: string do fragmento 2 -->
+    <string name="metas_para_a_minha_semana">METAS PARA A MINHA SEMANA :</string>
+    <string name="nova_tarefa">Nova Tarefa</string>
+    <string name="adicionar_tarefa">Adicionar Tarefa</string>
+
 
 </resources>
+
