--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
-    <string name="app_name">LISTADEPROYECTO</string>
+    <string name="app_name">Gerenciador De Tarefas</string>
     <!-- TODO: string do fragmento 1 -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="bem_vindo">Bem-vindo!</string>
     <string name="list_view">ListView:</string>
     <string name="use">Use</string>
