--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="metas_para_a_minha_semana">METAS PARA A MINHA SEMANA :</string>
     <string name="nova_tarefa">Nova Tarefa</string>
     <string name="adicionar_tarefa">Adicionar Tarefa</string>
+    <string name="gerenciamento_de_tarefas">Gerenciamento de tarefas</string>
 
 
 </resources>
