--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,14 +4,60 @@
     <string name="task_manager">Gerenciador de tarefas</string>
     <string name="welcome">Bem-vindo !</string>
 
-    <string name="New_Task">Digite  Tarefa</string>
+    <string name="ok">OK</string>
+    <string name="no">Não</string>
     <string name="add">Add</string>
-    <string name="app_name">app_name</string>
-    <string name="Edit_Task">Editar tarefa</string>
+    <string name="yes">Sim</string>
+
+    <string name="edit">Editar</string>
+    <string name="save">Guardar</string>
+    <string name="title">Título</string>
     <string name="editar">Editar</string>
+
+    <string name="guardar">Guardar</string>
+    <string name="delete">Eliminar</string>
     <string name="remove">Eliminar</string>
+    <string name="cancel">Cancelar</string>
 
+    <string name="app_name">app_name</string>
+    <string name="cancelar">Cancelar</string>
 
+    <string name="description">Descrição</string>
+    <string name="New_Task">Digite Tarefa</string>
+    <string name="edit_task">Editar tarefa</string>
+    <string name="Edit_Task">Editar tarefa</string>
+
+    <string name="add_task">Adicionar tarefa</string>
+    <string name="task_list">Lista de tarefas</string>
+    <string name="delete_task">Eliminar tarefa</string>
+    <string name="task_title">Título da tarefa</string>
+
+    <string name="task_added">Tarefa adicionada</string>
+    <string name="task_deleted">Tarefa eliminada</string>
+    <string name="task_updated">Tarefa atualizada</string>
+
+    <string name="task_not_found">Tarefa não encontrada</string>
+    <string name="task_empty">Nenhuma tarefa encontrada</string>
+    <string name="task_description">Descrição da tarefa</string>
+
+    <string name="task_manager_title">Gerenciador de tarefas</string>
+    <string name="task_not_found_error">Tarefa não encontrada</string>
+    <string name="task_not_empty">A descrição não pode estar vazia</string>
+
+    <string name="task_not_added">Não foi possível adicionar a tarefa</string>
+    <string name="task_not_deleted">Não foi possível eliminar a tarefa</string>
+    <string name="task_not_updated">Não foi possível atualizar a tarefa</string>
+    <string name="task_added_successfully">Tarefa adicionada com sucesso</string>
+
+    <string name="task_deleted_successfully">Tarefa eliminada com sucesso</string>
+    <string name="task_updated_successfully">Tarefa atualizada com sucesso</string>
+    <string name="task_title_empty">O título da tarefa não pode estar vazio</string>
+    <string name="task_not_added_error">Não foi possível adicionar a tarefa</string>
+
+    <string name="task_title_not_empty">O título da tarefa não pode estar vazio</string>
+    <string name="are_you_sure">Está a punto de eliminar esta tarefa. Tem certeza?</string>
+    <string name="task_description_empty">A descrição da tarefa não pode estar vazia</string>
+    <string name="task_description_not_empty">A descrição da tarefa não pode estar vazia</string>
 
 </resources>
 
