--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="remove">Eliminar</string>
     <string name="cancel">Cancelar</string>
 
-    <string name="app_name">app_name</string>
+    <string name="app_name">To Do List</string>
     <string name="cancelar">Cancelar</string>
 
     <string name="description">Descrição</string>
