--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -3,32 +3,32 @@
     <string name="task_manager">Task Manager</string>
     <string name="welcome">Welcome !</string>
 
-    <string name="ok">OK</string>
-    <string name="no">No</string>
-    <string name="add">Add</string>
-    <string name="yes">Yes</string>
-
-    <string name="edit">Edit</string>
+    <string name="add_task">ADD TASK</string>
+    <string name="edit_task">Edit Task</string>
     <string name="save">Save</string>
+    <string name="cancel">Cancel</string>
+    <string name="fill_all_fields">Fill all fields</string>
+    <string name="delete_task">Delete Task</string>
+    <string name="confirm_delete_task">Are you sure you want to delete the task?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+
+    <string name="ok">OK</string>
+    <string name="add">Add</string>
+    <string name="edit">Edit</string>
     <string name="title">Title</string>
     <string name="editar">Edit</string>
 
     <string name="guardar">Save</string>
     <string name="delete">Delete</string>
     <string name="remove">Remove</string>
-    <string name="cancel">Cancel</string>
-
     <string name="app_name">To Do List</string>
     <string name="cancelar">Cancel</string>
 
     <string name="description">Description</string>
     <string name="New_Task">New Task</string>
-    <string name="edit_task">Edit task</string>
     <string name="Edit_Task">Edit task</string>
-
-    <string name="add_task">Add task</string>
     <string name="task_list">Task List</string>
-    <string name="delete_task">Delete task</string>
     <string name="task_title">Title of the task</string>
 
     <string name="task_added">Task added</string>
